Fix button link styling for improved visibility

--- a/form.css
+++ b/form.css
@@ -61,6 +61,9 @@ select {
     border-radius: 5px;
     background-color: #E7EFF3;
     border: none;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
 
 form button {
